Создание главного экрана и блока путешествия, их адаптирование

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,8 +18,9 @@
 
 @import "blocks/header";
 @import "blocks/nav";
+@import "blocks/main-block";
+@import "blocks/journey";
 @import "blocks/footer";
-
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
