--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,5 +1,12 @@
 .header {
-  background-color: $color-dark-blue;
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 0;
+  margin: 0;
+  z-index: 100;
 }
 
 .header__wrapper {
