--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,8 +1,8 @@
 // Colors
 
-$color-white: #F9FBFD;
-$color-grey: #D8D8D9;
-$color-dark-blue: #011C40;
+$color-white: #f9fbfd;
+$color-grey: #d8d8d9;
+$color-dark-blue: #011c40;
 
 // Default
 
@@ -24,14 +24,16 @@ $fs-small: 14px;
 $fs-default: 16px;
 $fs-normal: 18px;
 $fs-average: 20px;
+$fs-solid: 24px;
 $fs-big: 26px;
 $fs-huge: 28px;
 $fs-tall: 34px;
-$fs-mega: 40px;
-$fs-ultra: 50px;
+$fs-mega: 36px;
+$fs-ultra: 40px;
+$fs-giant: 50px;
 $fs-desktop: 54px;
 
-// 28 54 20 16 18 14 40 10 50 26 34 12
+// 28 54 20 16 18 14 40 10 50 26 34 12 36 24
 
 $fh-tiny: 12px;
 $fh-little: 13px;
@@ -55,7 +57,7 @@ $fh-desktop: 66px;
 
 $fw-regular: 400;
 $fw-medium: 500;
-$fw-semiregular: 600;
+$fw-semibold: 600;
 $fw-bold: 700;
 
 // Animation
