--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,7 @@
 @import "blocks/nav";
 @import "blocks/main-block";
 @import "blocks/journey";
+@import "blocks/advantages";
 @import "blocks/footer";
 @import "blocks/btn";
 @import "blocks/modal";
