--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,7 @@
 @import "blocks/main-block";
 @import "blocks/journey";
 @import "blocks/advantages";
+@import "blocks/catalog";
 @import "blocks/footer";
 @import "blocks/btn";
 @import "blocks/modal";
