--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -10,6 +10,16 @@
   align-items: center;
   padding-top: 85px;
   margin-bottom: 120px;
+
+  @include vp-1023 {
+    padding-top: 90px;
+    margin-bottom: 100px;
+  }
+
+  @include vp-767 {
+    padding-top: 58px;
+    margin-bottom: 65px;
+  }
 }
 
 .catalog__wrapper h2 {
@@ -21,26 +31,57 @@
   margin: 0;
   margin-bottom: 49px;
   z-index: 5;
+
+  @include vp-1023 {
+    font-size: $fs-big;
+    line-height: $fh-tall;
+  }
+
+  @include vp-767 {
+    font-size: $fs-solid;
+    line-height: $fh-huge;
+    margin-bottom: 29px;
+  }
 }
 
 .catalog__list {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   gap: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .catalog__block {
   position: relative;
   width: 260px;
   height: 386px;
+
+  @include vp-1023 {
+    width: 309px;
+  }
+
+  @include vp-767 {
+    width: 270px;
+  }
 }
 
 .catalog__block img {
   position: absolute;
   top: 0;
   z-index: 1;
+  width: 260px;
+  height: 386px;
+
+  @include vp-1023 {
+    width: 309px;
+  }
+
+  @include vp-767 {
+    width: 270px;
+  }
 }
 
 .catalog__block h3 {
@@ -54,10 +95,20 @@
   font-weight: $fw-medium;
   color: $color-white;
   margin: 0;
+
+  @include vp-1023 {
+    bottom: 25px;
+    left: 35px;
+  }
+
+  @include vp-767 {
+    bottom: 15px;
+    left: 25px;
+  }
 }
 
 .catalog__pop-up {
-  visibility: hidden;
+  opacity: 0;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -69,6 +120,18 @@
   position: relative;
   z-index: 5;
   background-color: $color-dark-blue;
+
+  @include vp-1023 {
+    width: 309px;
+    padding-left: 35px;
+    padding-right: 35px;
+  }
+
+  @include vp-767 {
+    width: 270px;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
 }
 
 .catalog__pop-up h4 {
@@ -109,13 +172,14 @@
 }
 
 .catalog__block:hover .catalog__pop-up,
-.catalog__block:focus .catalog__pop-up {
-  visibility: visible;
+.catalog__block:focus-within .catalog__pop-up {
+  opacity: 1;
 }
 
 .catalog__block a {
   display: inline-block;
   cursor: pointer;
+  text-align: center;
   font-family: $ff-montserrat;
   font-size: $fs-small;
   line-height: $fh-decent;
@@ -130,6 +194,7 @@
   }
 }
 
-.catalog__block--atlantis a {
+.catalog__block--atlantis a,
+.catalog__block--olympia a {
   margin-top: 10px;
 }
