--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,6 +22,7 @@
 @import "blocks/journey";
 @import "blocks/advantages";
 @import "blocks/catalog";
+@import "blocks/booking";
 @import "blocks/footer";
 @import "blocks/btn";
 @import "blocks/modal";
