--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -14,11 +14,14 @@
   flex-wrap: wrap;
   justify-content: space-between;
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 44px;
 
   @include vp-767 {
     flex-direction: column;
-    padding: 40px 15px;
+    padding-top: 40px;
+    padding-bottom: 35px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
@@ -26,11 +29,17 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
 
   @include vp-767 {
     flex-direction: column;
-    align-items: start;
+  }
+}
+
+.footer__nav > a {
+  @include vp-767 {
+    display: block;
+    width: 42px;
+    height: 22px;
   }
 }
 
@@ -51,9 +60,11 @@
 }
 
 .footer__menu {
+  padding-top: 9px;
   margin-left: 40px;
 
   @include vp-1023 {
+    padding-top: 0;
     margin-left: 25px;
   }
 
@@ -75,7 +86,7 @@
 
   @include vp-767 {
     column-gap: 0;
-    padding-top: 10px;
+    padding-top: 16px;
     flex-direction: column;
   }
 }
@@ -115,15 +126,22 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
-  column-gap: 27px;
+  column-gap: 15px;
 
   @include vp-1023 {
-    column-gap: 22px;
+    position: relative;
+    right: -4px;
+    column-gap: 12px;
+  }
+
+  @include vp-767 {
+    right: 4px;
   }
 }
 
 .footer__socials a {
-  display: block;
+  margin: 0;
+  padding: 5px;
 }
 
 .footer__socials-svg--ok {
