--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -9,6 +9,12 @@
   z-index: 100;
 }
 
+.header--opened {
+  @include vp-767 {
+    background-color: rgba(0, 43, 102, 0.5);
+  }
+}
+
 .header__wrapper {
   display: flex;
   flex-direction: row;
@@ -38,13 +44,14 @@
     padding-left: 15px;
     padding-right: 15px;
     margin-left: 36px;
-    min-height: 100vh;
+    min-height: 568px;
   }
 }
 
-.header__wrapper a {
+.header__wrapper > a {
   @include vp-767 {
     width: 42px;
+    height: 22px;
   }
 
   @include hover-focus {
@@ -68,8 +75,21 @@
   }
 }
 
-.header__wrapper--opened svg {
+.header__wrapper--opened svg,
+.header--nojs svg {
   @include vp-767 {
     fill: $color-dark-blue;
+  }
+}
+
+.header--nojs {
+  @include vp-767 {
+    position: relative;
+  }
+}
+
+.header--nojs .header__wrapper {
+  @include vp-767 {
+    justify-content: start;
   }
 }
