--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -15,7 +15,9 @@
     display: block;
     width: 24px;
     height: 12px;
-    top: 4px;
+    top: -10px;
+    left: 8px;
+    padding: 20px;
     background-color: transparent;
     border: none;
   }
@@ -24,8 +26,8 @@
 .nav--closed .nav__toggle::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 14px;
+  left: 8px;
   width: 24px;
   height: 2px;
   background-color: $color-white;
@@ -35,16 +37,16 @@
 .nav--opened .nav__toggle {
   @include vp-767 {
     position: absolute;
-    top: -18px;
-    right: -9px;
+    top: -36px;
+    left: 228px;
   }
 }
 
 .nav--opened .nav__toggle::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 18px;
+  left: 12px;
   width: 18px;
   height: 2px;
   background-color: $color-dark-blue;
@@ -54,8 +56,8 @@
 .nav--opened .nav__toggle::after {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 18px;
+  left: 12px;
   width: 18px;
   height: 2px;
   background-color: $color-dark-blue;
@@ -118,5 +120,23 @@
 .nav--closed ul {
   @include vp-767 {
     display: none;
+  }
+}
+
+.nav--nojs .nav__toggle {
+  @include vp-767 {
+    display: none;
+  }
+}
+
+.nav--nojs ul {
+  @include vp-767 {
+    display: block;
+  }
+}
+
+.nav--nojs a {
+  @include vp-767 {
+    color: $color-dark-blue;
   }
 }
