--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,7 @@
 @import "blocks/advantages";
 @import "blocks/catalog";
 @import "blocks/booking";
+@import "blocks/contacts";
 @import "blocks/footer";
 @import "blocks/btn";
 @import "blocks/modal";
