--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -16,6 +16,10 @@
   padding-top: 50px;
   padding-bottom: 44px;
 
+  @include vp-1023 {
+    padding-top: 47px;
+  }
+
   @include vp-767 {
     flex-direction: column;
     padding-top: 40px;
@@ -36,8 +40,13 @@
 }
 
 .footer__nav > a {
+  @include vp-1023 {
+    padding-top: 3px;
+  }
+
   @include vp-767 {
     display: block;
+    padding-top: 0;
     width: 42px;
     height: 22px;
   }
