--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -20,6 +20,11 @@
     padding: 20px;
     background-color: transparent;
     border: none;
+    cursor: pointer;
+  }
+
+  @include hover-focus {
+    opacity: 0.8;
   }
 }
 
@@ -37,7 +42,7 @@
 .nav--opened .nav__toggle {
   @include vp-767 {
     position: absolute;
-    top: -36px;
+    top: -28px;
     left: 228px;
   }
 }
@@ -46,7 +51,7 @@
   content: "";
   position: absolute;
   top: 18px;
-  left: 12px;
+  left: 11px;
   width: 18px;
   height: 2px;
   background-color: $color-dark-blue;
@@ -57,7 +62,7 @@
   content: "";
   position: absolute;
   top: 18px;
-  left: 12px;
+  left: 11px;
   width: 18px;
   height: 2px;
   background-color: $color-dark-blue;
@@ -78,8 +83,8 @@
     flex-direction: column;
     column-gap: 0;
     align-items: start;
-    padding-top: 25px;
-    row-gap: 9px;
+    padding-top: 35px;
+    row-gap: 8px;
   }
 }
 
@@ -132,6 +137,7 @@
 .nav--nojs ul {
   @include vp-767 {
     display: block;
+    padding-top: 0;
   }
 }
 
