--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -5,6 +5,12 @@
   @include vp-1023 {
     padding-top: 0;
   }
+
+  @include vp-767 {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
 }
 
 .nav__toggle {
@@ -41,9 +47,10 @@
 
 .nav--opened .nav__toggle {
   @include vp-767 {
-    position: absolute;
+    align-self: flex-end;
+    position: relative;
     top: -28px;
-    left: 228px;
+    left: 14px;
   }
 }
 
@@ -80,10 +87,11 @@
   }
 
   @include vp-767 {
+    position: relative;
+    top: -8px;
     flex-direction: column;
     column-gap: 0;
     align-items: start;
-    padding-top: 35px;
     row-gap: 8px;
   }
 }
