--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -48,10 +48,8 @@
 }
 
 .advantages__list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 40px;
   z-index: 5;
 
@@ -60,7 +58,9 @@
   }
 
   @include vp-767 {
+    display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
   }
 }
 
