--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -38,10 +38,12 @@
   flex: 1;
   padding-top: 162px;
   z-index: 5;
+  margin-right: 15px;
 
   @include vp-1023 {
     padding-top: 0;
     align-items: center;
+    margin-right: 0;
     margin-bottom: 51px;
   }
 
@@ -99,6 +101,7 @@
 
 .booking__form {
   width: 403px;
+  max-height: 455px;
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 45px;
@@ -115,6 +118,7 @@
 
   @include vp-767 {
     width: 100%;
+    max-height: 460px;
     margin: 0;
     padding-top: 35px;
     padding-left: 30px;
@@ -123,7 +127,7 @@
   }
 }
 
-.booking__form p {
+.booking__form > p {
   font-family: $ff-montserrat;
   font-size: $fs-normal;
   line-height: $fh-average;
@@ -144,7 +148,10 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 21px;
+}
+
+.booking__form-block {
+  margin-bottom: 21px;
 }
 
 .booking__form-block input {
@@ -161,12 +168,21 @@
 
 .booking__form-agreement {
   position: relative;
+  top: -5px;
+  width: fit-content;
+  cursor: pointer;
+  margin-bottom: 21px;
+}
+
+.booking__form-agreement label {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
-  top: -5px;
-  cursor: pointer;
+  margin-bottom: 8px;
+
+  @include vp-767 {
+    margin-bottom: 0;
+  }
 }
 
 input[type="checkbox"]:focus ~ .booking__form-checkbox {
@@ -216,14 +232,18 @@ input[type="checkbox"]:checked ~ .booking__svg {
   line-height: $fh-little;
   font-weight: $fw-regular;
   color: $color-white;
+  margin: 0;
   cursor: pointer;
+  display: flex;
+  flex: 1;
+  align-items: center;
+  position: relative;
+  top: 5px;
+  left: 5px;
 
   @include vp-767 {
-    position: absolute;
-    top: 5px;
-    left: 28px;
+    left: 8px;
     line-height: $fh-tiny;
-    padding-right: 50px;
   }
 
   @include hover-focus {
@@ -240,9 +260,13 @@ input[type="checkbox"]:checked ~ .booking__svg {
   color: $color-dark-blue;
   background-color: $color-white;
   justify-content: center;
-  margin-top: 2px;
+  margin-top: 1px;
   padding-top: 11px;
   padding-bottom: 12px;
+
+  @include vp-767 {
+    margin-top: 5px;
+  }
 }
 
 .booking__form-block,
