--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -109,9 +109,7 @@
 
 .catalog__pop-up {
   opacity: 0;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  display: inline-block;
   width: 260px;
   height: 386px;
   padding-top: 29px;
@@ -120,6 +118,7 @@
   position: relative;
   z-index: 5;
   background-color: $color-dark-blue;
+  overflow: auto;
 
   @include vp-1023 {
     width: 309px;
@@ -188,6 +187,7 @@
   padding: 10px 48px;
   color: $color-dark-blue;
   margin-top: 17px;
+  margin-bottom: 17px;
 
   @include hover-focus {
     opacity: 0.8;
