--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -82,7 +82,7 @@
     padding-top: 0;
     margin-left: 0;
     order: -1;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
 }
 
@@ -106,6 +106,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .contacts__adress svg {
@@ -119,8 +120,6 @@
 }
 
 .contacts__adress {
-  margin-bottom: 20px;
-
   @include vp-1023 {
     align-items: start;
     margin-right: 40px;
@@ -136,7 +135,7 @@
 }
 
 .contacts__adress p,
-.contacts__phone a {
+.contacts__phone-number {
   font-family: $ff-montserrat;
   font-size: $fs-default;
   line-height: $fh-default;
@@ -147,6 +146,11 @@
 }
 
 .contacts__phone a {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+
   @include hover-focus {
     opacity: 0.8;
   }
@@ -154,6 +158,7 @@
 
 .contacts__phone svg {
   @include vp-767 {
-    margin-top: -2px;
+    position: relative;
+    top: -2px;
   }
 }
