--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -39,7 +39,7 @@
   }
 }
 
-.footer__nav > a {
+.footer__link a {
   @include vp-1023 {
     padding-top: 3px;
   }
@@ -69,15 +69,18 @@
 }
 
 .footer__menu {
-  padding-top: 9px;
+  margin-top: 9px;
   margin-left: 40px;
+  max-width: 760px;
 
   @include vp-1023 {
-    padding-top: 0;
+    margin-top: 0;
     margin-left: 25px;
+    max-width: 500px;
   }
 
   @include vp-767 {
+    max-width: none;
     margin-left: 0;
     width: 100%;
   }
@@ -87,14 +90,14 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  column-gap: 33px;
+  gap: 33px;
 
   @include vp-1023 {
-    column-gap: 23px;
+    gap: 23px;
   }
 
   @include vp-767 {
-    column-gap: 0;
+    gap: 0;
     padding-top: 16px;
     flex-direction: column;
   }
@@ -121,12 +124,17 @@
 }
 
 .footer__socials {
-  display: flex;
-  align-items: center;
-  padding-top: 3px;
+  margin-top: 10px;
+  max-width: 120px;
+
+  @include vp-1023 {
+    max-width: 102px;
+    margin-top: 5px;
+  }
 
   @include vp-767 {
-    padding-top: 15px;
+    max-width: none;
+    margin-top: 15px;
   }
 }
 
@@ -134,16 +142,17 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
-  column-gap: 15px;
+  justify-content: flex-end;
+  gap: 15px;
 
   @include vp-1023 {
     position: relative;
     right: -4px;
-    column-gap: 12px;
+    gap: 12px;
   }
 
   @include vp-767 {
+    justify-content: flex-start;
     right: 4px;
   }
 }
