--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -11,7 +11,22 @@
 
 .header--opened {
   @include vp-767 {
+    position: fixed;
     background-color: rgba(0, 43, 102, 0.5);
+  }
+}
+
+.header--opened .header__overlay {
+  @include vp-767 {
+    flex-shrink: 0;
+    flex-grow: 0;
+    width: 100%;
+    min-height: 100%;
+    margin: auto;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
   }
 }
 
@@ -36,6 +51,7 @@
 
 .header__wrapper--opened {
   @include vp-767 {
+    width: calc(100% - 36px);
     background-color: $color-white;
     flex-direction: column;
     flex-wrap: wrap;
@@ -44,11 +60,19 @@
     padding-left: 15px;
     padding-right: 15px;
     margin-left: 36px;
-    min-height: 568px;
+    min-height: 100vh;
   }
 }
 
-.header__wrapper > a {
+.header__link a {
+  width: 70px;
+  height: 38px;
+
+  @include vp-1023 {
+    width: 38px;
+    height: 20px;
+  }
+
   @include vp-767 {
     width: 42px;
     height: 22px;
