--- a/source/sass/blocks/journey.scss
+++ b/source/sass/blocks/journey.scss
@@ -5,12 +5,10 @@
   justify-content: space-between;
   padding-top: 112px;
   margin-bottom: 145px;
-  align-items: center;
 
   @include vp-1023 {
     padding-top: 90px;
     margin-bottom: 91px;
-    align-items: start;
   }
 
   @include vp-767 {
@@ -29,9 +27,11 @@
   flex: 1;
   max-width: 512px;
   min-width: 400px;
+  padding-top: 57px;
   margin-right: 20px;
 
   @include vp-1023 {
+    padding-top: 0;
     min-width: 324px;
     margin-right: 30px;
   }
