--- a/source/sass/blocks/main-block.scss
+++ b/source/sass/blocks/main-block.scss
@@ -17,18 +17,18 @@
   padding-top: 273px;
   margin-left: 95px;
   margin-bottom: 0;
-  height: 658px;
+  min-height: 658px;
 
   @include vp-1023 {
     padding-top: 270px;
     margin-left: 0;
-    height: 638px;
+    min-height: 638px;
   }
 
   @include vp-767 {
     padding-top: 175px;
     margin: 0 15px;
-    height: 500px;
+    min-height: 500px;
   }
 }
 
@@ -64,6 +64,7 @@
   color: $color-white;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   margin: 0;
+  margin-bottom: 20px;
 
   @include vp-1023 {
     font-size: $fs-normal;
