--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -1,6 +1,7 @@
 .nav {
   position: relative;
   padding-top: 8px;
+  flex: 1;
 
   @include vp-1023 {
     padding-top: 0;
@@ -10,6 +11,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    align-items: flex-end;
   }
 }
 
@@ -43,6 +45,14 @@
   height: 2px;
   background-color: $color-white;
   box-shadow: 0 6px 0 0 $color-white, 0 12px 0 0 $color-white;
+}
+
+.nav--opened {
+  @include vp-767 {
+    align-items: start;
+    position: relative;
+    top: -7px;
+  }
 }
 
 .nav--opened .nav__toggle {
@@ -79,7 +89,10 @@
 .nav ul {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   column-gap: 34px;
+  row-gap: 35px;
+  justify-content: flex-end;
   align-items: center;
 
   @include vp-1023 {
