Новые правки по баг-ревью

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -50,6 +50,7 @@
 .advantages__list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 1fr;
   gap: 40px;
   z-index: 5;
 
