--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -18,12 +18,13 @@
 
   @include vp-1023 {
     padding-top: 47px;
+    padding-bottom: 40px;
   }
 
   @include vp-767 {
     flex-direction: column;
     padding-top: 40px;
-    padding-bottom: 35px;
+    padding-bottom: 28px;
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -124,17 +125,21 @@
 }
 
 .footer__socials {
-  margin-top: 10px;
+  position: relative;
+  top: 7px;
+  right: -3px;
   max-width: 120px;
 
   @include vp-1023 {
     max-width: 102px;
-    margin-top: 5px;
+    top: 0;
+    right: 0;
   }
 
   @include vp-767 {
     max-width: none;
-    margin-top: 15px;
+    margin-top: 12px;
+    left: -4px;
   }
 }
 
@@ -148,7 +153,7 @@
   @include vp-1023 {
     position: relative;
     right: -4px;
-    gap: 12px;
+    gap: 11px;
   }
 
   @include vp-767 {
@@ -158,22 +163,12 @@
 }
 
 .footer__socials a {
+  display: inline-block;
   margin: 0;
   padding: 5px;
 }
 
-.footer__socials-svg--ok {
-  width: 12px;
-  height: 20px;
-
-  @include vp-1023 {
-    width: 10px;
-    height: 16px;
-  }
-}
-
-.footer__socials-svg--dzen,
-.footer__socials-svg--reddit {
+.footer__socials-svg {
   width: 20px;
   height: 20px;
 
