--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -36,6 +36,10 @@ body {
   background-color: $color-default-white;
 }
 
+body.locked {
+  overflow: hidden;
+}
+
 a {
   color: $color-default-black;
   text-decoration: none;
